# SafeLLMBench

./: DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: redteam_results.csv
notebooks/: 01_generator_finetune.ipynb  02_redteam_inference.ipynb  03_safety_classifier.ipynb
safellmbench/: __init__.py  cli.py  config.py  setup_bundles.py
safellmbench/benchmark/: runner.py  seeds.py
safellmbench/models/: classifier.py  generator.py  target.py
safellmbench/server/: openai_server.py
